<resources>
    <string name="app_name">Cryptocurrencies Observer</string>
    <string name="cryptocurrencies_n_observer">Cryptocurrencies \n Observer</string>
    <string name="day_maximum">Day maximum:</string>
    <string name="day_minimum">Day minimum:</string>
    <string name="price">Price:</string>
    <string name="last_trade">Last trade:</string>
    <string name="last_update">Last update:</string>
    <string name="clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>