<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailsFragment">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.CoinDetailsActivity"
        app:cardUseCompatPadding="true"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageViewCoinLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="BTC / USDT"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:id="@+id/textViewCoinName"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="0000000000"
                    android:textStyle="bold"
                    android:id="@+id/textViewCoinPrice"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_minimum"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="0000000000"
                    android:id="@+id/textViewDayMin"
                    android:textColor="@android:color/holo_red_dark"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_maximum"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="0000000000"
                    android:id="@+id/textViewDayMax"
                    android:textColor="@android:color/holo_green_dark"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_trade"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Galamarket"
                    android:id="@+id/textViewLastTrade"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Just now"
                    android:id="@+id/textViewLastUpdate"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>